BB-16961: Layout bug on IE11 support investigation (#24200)
- add workaround for correct calculate height of flexbox item with flex-grow in IE 11

--- a/src/Oro/Bundle/UIBundle/Resources/public/blank/scss/components/wrapper.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/blank/scss/components/wrapper.scss
@@ -3,6 +3,9 @@
 .wrapper {
     height: 100%;
     min-height: 100%;
+    
+    display: flex;
+    flex-direction: column;
 
     &__content {}
 }
